tests/error/local_move_variable_type.bz
// error: non-parameter variable cannot have a move reference type 'move int32'
function test()
{
	let _: move int32 = 0i32;
}
